Add option to search reservations by reserver's info (#619)
Search filter is partially copied from rest_framework.filters'
SearchFilter in order to ensure, that it respects already present
queryset filters in the ReservationFilterSet.

Refs VAR-141
